# mi_E2EE

./: .gitignore  AGENTS.md  CMakeLists.txt  EncryptedBasicTypes.md  Front-end_requirements.txt  Front-end_yl.txt  README.md  SECURITY_EVAL.md  bdtd.txt  end_yl.txt  integration_checklist.md  protocol.md  security_evaluation.md  开发要求.txt
.github/workflows/: build.yml
common/: crypto_stub.cpp  crypto_stub.h  file_hmac.cpp  file_hmac.h  file_ops.cpp  file_ops.h  hmac.cpp  hmac.h  picosha2.h  sha256.cpp  sha256.h
example/: EncryptedBasicTypes.md  Front-end_requirements.txt  bdtd.txt
include/: CMakeLists.txt  generated_cert.h.in  generated_keys.h.in  mi_common.h
mi_client_E2EE/: CMakeLists.txt
mi_client_E2EE/include/: mi_client_api.h
mi_client_E2EE/include/qt_ui/: BackendService.h  ChatWidget.h  ConversationItemWidget.h  LoginWindow.h  MainWindow.h  MessageDelegate.h  MessageModel.h  MessageReceiverThread.h
mi_client_E2EE/mi_bridge/: binding.gyp  package.json
mi_client_E2EE/mi_bridge/src/: addon.cpp
mi_client_E2EE/src/: encrypted_types.cpp  file_chunker.cpp  file_chunker.h  kcp_transport.cpp  kcp_transport.h  mi_client_api.cpp
mi_client_E2EE/src/E2EE_Client_Windows/: main.js  package.json
mi_client_E2EE/src/E2EE_Client_Windows/src/: index.html  login.html  preload.js
mi_client_E2EE/src/E2EE_Client_Windows/src/css/: login.css  main.css  vars.css
mi_client_E2EE/src/E2EE_Client_Windows/src/js/: login_renderer.js  main_renderer.js
mi_client_E2EE/src/android_stub/: README.md
mi_client_E2EE/src/qt_ui/: BackendService.cpp  ChatWidget.cpp  ConversationItemWidget.cpp  LoginWindow.cpp  MainWindow.cpp  MessageDelegate.cpp  MessageModel.cpp  MessageReceiverThread.cpp  main.cpp  main.qss
mi_server/: CMakeLists.txt
mi_server/include/: mi_server_api.h
mi_server/src/: kcp_stub.cpp  kcp_stub.h  mi_server_api.cpp  mysql_stub.cpp  mysql_stub.h  server_main.cpp
