cmake_minimum_required(VERSION 3.16)
project(mi_e2ee LANGUAGES C CXX)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
add_compile_definitions(MI_STATIC)
if(MSVC)
    # Avoid MSVC constexpr mutex ABI requiring newer vcrt; use runtime-initialized mutex.
    add_compile_definitions(_DISABLE_CONSTEXPR_MUTEX_CONSTRUCTOR)
endif()

option(MI_USE_OPENSSL "Use OpenSSL for AES-GCM and crypto primitives" ON)
option(MI_USE_KCP "Use real KCP transport if available" OFF)
option(MI_USE_MYSQL "Use mysqlclient for server auth/storage if available" OFF)
option(MI_REQUIRE_KEYS "Fail configure if server keys are not provided" ON)

# Built-in keys injected at configure time (hex strings, 64 chars each)
set(_default_zero_key "0000000000000000000000000000000000000000000000000000000000000000")
if(DEFINED ENV{MI_SERVER_PUB_HEX} AND NOT MI_SERVER_PUB_HEX)
    set(MI_SERVER_PUB_HEX "$ENV{MI_SERVER_PUB_HEX}")
endif()
if(NOT MI_SERVER_PUB_HEX)
    set(MI_SERVER_PUB_HEX "${_default_zero_key}")
endif()
if(DEFINED ENV{MI_SERVER_SIGN_PUB_HEX} AND NOT MI_SERVER_SIGN_PUB_HEX)
    set(MI_SERVER_SIGN_PUB_HEX "$ENV{MI_SERVER_SIGN_PUB_HEX}")
endif()
if(NOT MI_SERVER_SIGN_PUB_HEX)
    set(MI_SERVER_SIGN_PUB_HEX "${_default_zero_key}")
endif()
if(DEFINED ENV{MI_SERVER_SIGN_PRIV_HEX} AND NOT MI_SERVER_SIGN_PRIV_HEX)
    set(MI_SERVER_SIGN_PRIV_HEX "$ENV{MI_SERVER_SIGN_PRIV_HEX}")
endif()
if(NOT MI_SERVER_SIGN_PRIV_HEX)
    set(MI_SERVER_SIGN_PRIV_HEX "${_default_zero_key}")
endif()
string(LENGTH "${MI_SERVER_PUB_HEX}" _pub_len)
string(LENGTH "${MI_SERVER_SIGN_PUB_HEX}" _sign_len)
string(LENGTH "${MI_SERVER_SIGN_PRIV_HEX}" _sign_priv_len)
if(NOT _pub_len EQUAL 64)
    message(WARNING "MI_SERVER_PUB_HEX should be 64 hex chars; got ${_pub_len}")
endif()
if(NOT _sign_len EQUAL 64)
    message(WARNING "MI_SERVER_SIGN_PUB_HEX should be 64 hex chars; got ${_sign_len}")
endif()
if(NOT _sign_priv_len EQUAL 64)
    message(WARNING "MI_SERVER_SIGN_PRIV_HEX should be 64 hex chars; got ${_sign_priv_len}")
endif()
if(MI_REQUIRE_KEYS)
    if("${MI_SERVER_PUB_HEX}" STREQUAL "${_default_zero_key}" OR "${MI_SERVER_SIGN_PUB_HEX}" STREQUAL "${_default_zero_key}")
        message(FATAL_ERROR "MI_REQUIRE_KEYS=ON but server keys not provided. Set MI_SERVER_PUB_HEX and MI_SERVER_SIGN_PUB_HEX (64 hex chars each).")
    endif()
endif()

# Optional embedded self-signed certificate/key (base64-encoded PEM strings).
if(DEFINED ENV{MI_CERT_PEM_B64} AND NOT MI_CERT_PEM_B64)
    set(MI_CERT_PEM_B64 "$ENV{MI_CERT_PEM_B64}")
endif()
if(NOT MI_CERT_PEM_B64)
    set(MI_CERT_PEM_B64 "")
endif()
if(DEFINED ENV{MI_CERT_KEY_PEM_B64} AND NOT MI_CERT_KEY_PEM_B64)
    set(MI_CERT_KEY_PEM_B64 "$ENV{MI_CERT_KEY_PEM_B64}")
endif()
if(NOT MI_CERT_KEY_PEM_B64)
    set(MI_CERT_KEY_PEM_B64 "")
endif()
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/generated_keys.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/include/generated_keys.h @ONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/generated_cert.h.in
               ${CMAKE_CURRENT_SOURCE_DIR}/include/generated_cert.h @ONLY)

if(MI_USE_OPENSSL)
    find_package(OpenSSL QUIET)
    if(OpenSSL_FOUND)
        message(STATUS "OpenSSL found: enabling MI_USE_OPENSSL")
        add_definitions(-DMI_USE_OPENSSL)
    else()
        if(NOT WIN32)
            message(FATAL_ERROR "OpenSSL required on non-Windows platforms; install libssl-dev/openssl.")
        else()
            message(WARNING "OpenSSL not found, falling back to platform/placeholder crypto on Windows")
            set(MI_USE_OPENSSL OFF)
        endif()
    endif()
endif()

if(MI_USE_KCP)
    find_path(KCP_INCLUDE_DIR NAMES ikcp.h)
    find_library(KCP_LIBRARY NAMES kcp)
    if(KCP_INCLUDE_DIR AND KCP_LIBRARY)
        message(STATUS "KCP found: enabling MI_USE_KCP")
        add_definitions(-DMI_USE_KCP)
    else()
        message(WARNING "KCP not found; continuing with simulated transport")
        set(MI_USE_KCP OFF)
    endif()
endif()

if(MI_USE_MYSQL)
    find_package(MySQL QUIET COMPONENTS Client)
    if(MySQL_FOUND)
        message(STATUS "MySQL client found: enabling MI_USE_MYSQL")
        add_definitions(-DMI_USE_MYSQL)
    else()
        message(WARNING "MySQL client not found; continuing with stub auth")
        set(MI_USE_MYSQL OFF)
    endif()
endif()

add_library(mi_internal STATIC
    common/crypto_stub.cpp
    common/sha256.cpp
    common/file_ops.cpp
    common/hmac.cpp
    common/file_hmac.cpp
)
target_include_directories(mi_internal PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(mi_internal PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(mi_internal PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/common)
if(MI_USE_OPENSSL AND OpenSSL_FOUND)
    target_link_libraries(mi_internal PUBLIC OpenSSL::Crypto)
endif()

add_subdirectory(include)
add_subdirectory(mi_client_E2EE)
add_subdirectory(mi_server)
